mudando aluraflix para ruthflix

--- a/index.html
+++ b/index.html
@@ -28,30 +28,11 @@
 
     <!--código omitido -->
 
-    <section class="categoria">
+    <section>
         <h2>Vídeos semelhantes que talvez você possa gostar</h2>
-        <div class="categorias-vídeos">
-            <a href="https://www.youtube.com/shorts/MRiY1HBeJC0">
-
-                <img src="https://img.youtube.com/vi/MRiY1HBeJC0/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/shorts/jXqqd0ZBEMA">
-
-                <img src="https://img.youtube.com/vi/jXqqd0ZBEMA/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/shorts/yi3av50tI54">
-
-                <img src="https://img.youtube.com/vi/yi3av50tI54/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/shorts/In-OqrC5GJs">
-
-                <img src="https://img.youtube.com/vi/In-OqrC5GJs/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/shorts/n0_EB6XSpc0">
-
-                <img src="https://img.youtube.com/vi/n0_EB6XSpc0/maxresdefault.jpg" />
-            </a>
-        </div>
+         <div>
+            <img src="https://youtu.be/JnqPfWmGoeE?si=rTFEvWUZ78LdSjA4" />
+         </div>
     </section>
     <!-- código omitido -->
 
